--- a/sass/base.scss
+++ b/sass/base.scss
@@ -179,4 +179,5 @@ body {
   opacity: 10;
   width: 100vw;
   height: inherit;
+  z-index: 1000;
 }
